--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,17 +1,9 @@
 version: '2.1'
 orbs:
   node: circleci/node@x.y
-jobs:
-  install-node-example:
-    docker:
-      - image: 'cimg/base:stable'
-    steps:
-      - checkout
-      - node/install:
-          install-yarn: true
-          node-version: '16.13'
-      - run: node --version
 workflows:
-  test_my_app:
+  run-npm-command:
     jobs:
-      - install-node-example
+      - node/run:
+          npm-run: build
+
