--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,9 @@
 version: '2.1'
-orbs: 
-  node: circleci/node@5.0.2
 jobs:
-  install-node-example:
+  build:
     docker:
-      - image: 'cimg/base:stable'
+      - image: cimg/node:18.3.0
     steps:
       - checkout
-      - node/install:
-          install-yarn: true
-          node-version: '16.13'
       - run: node --version
-workflows:
-  test_my_app:
-    jobs:
-      - install-node-example
-
 
