--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,18 @@
 version: '2.1'
+workflows:
+  test-deploy:
+    jobs:
+      - test
+      
 jobs:
   build:
     docker:
       - image: cimg/node:18.3.0
     steps:
       - checkout
-      - run: node --version
-
+      - run: 
+          name: Install dependencies
+          command: npm install
+      - run:
+          name: Run Tests
+          command: npm run test
