--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,11 @@
-version: '2.1'
-
-workflows:
-  test-deploy:
-    jobs:
-      - test
-      
+version: 2.1
 jobs:
-  test:
+  build:
     docker:
-      - image: cimg/node:18.3.0
+      - image: cimg/node:17.2.0 # the primary container, where your job's commands are run
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
-      - checkout
-      - run: 
-          name: Install dependencies
-          command: npm install
-      - run:
-          name: Run Tests
-          command: npm run test
+      - checkout # check out the code in the project directory
+      - run: echo "hello world" # run the `echo` command
